refactor: eliminación de la colección elementos_html y ajustes en las colecciones relacionadas udistrital/sisifo_documentacion#172
