# src/elemento-html/elemento-html.controller.ts
@@ -1,135 +1,0 @@
-import {
-  Body,
-  Controller,
-  Delete,
-  Get,
-  HttpStatus,
-  Param,
-  Post,
-  Put,
-  Query,
-  Res,
-} from '@nestjs/common';
-import { ElementoHtmlDto } from './dto/elemento-html.dto';
-import { ElementoHtmlService } from './elemento-html.service';
-import { FilterDto } from '../filters/filters.dto';
-import { ApiTags } from '@nestjs/swagger';
-
-@ApiTags('elementos-html')
-@Controller('elementos-html')
-export class ElementoHtmlController {
-  constructor(private elementoHtmlService: ElementoHtmlService) {}
-
-  @Post()
-  async post(@Res() res, @Body() elementoHtmlDto: ElementoHtmlDto) {
-    try {
-      const elementoHtml = await this.elementoHtmlService.post(elementoHtmlDto);
-      res.status(HttpStatus.CREATED).json({
-        Success: true,
-        Status: HttpStatus.CREATED,
-        Message: 'Registration successful',
-        Data: elementoHtml,
-      });
-    } catch (error) {
-      res.status(HttpStatus.BAD_REQUEST).json({
-        Success: false,
-        Status: HttpStatus.BAD_REQUEST,
-        Message:
-          'Error service Post: The request contains an incorrect data type or an invalid parameter',
-        Data: error.message,
-      });
-    }
-  }
-
-  @Get()
-  async getAll(@Res() res, @Query() filterDto: FilterDto) {
-    try {
-      const elementosHtml = await this.elementoHtmlService.getAll(filterDto);
-      res.status(HttpStatus.OK).json({
-        Success: true,
-        Status: HttpStatus.OK,
-        Message: 'Request successful',
-        Data: elementosHtml,
-      });
-    } catch (error) {
-      res.status(HttpStatus.NOT_FOUND).json({
-        Success: false,
-        Status: HttpStatus.NOT_FOUND,
-        Message:
-          'Error service GetAll: The request contains an incorrect parameter or no record exist',
-        Data: error.message,
-      });
-    }
-  }
-
-  @Get('/:id')
-  async getById(@Res() res, @Param('id') id: string) {
-    try {
-      const elementoHtml = await this.elementoHtmlService.getById(id);
-      res.status(HttpStatus.OK).json({
-        Success: true,
-        Status: HttpStatus.OK,
-        Message: 'Request successful',
-        Data: elementoHtml,
-      });
-    } catch (error) {
-      res.status(HttpStatus.NOT_FOUND).json({
-        Success: false,
-        Status: HttpStatus.NOT_FOUND,
-        Message:
-          'Error service GetOne: The request contains an incorrect parameter or no record exist',
-        Data: error.message,
-      });
-    }
-  }
-
-  @Put('/:id')
-  async put(
-    @Res() res,
-    @Param('id') id: string,
-    @Body() elementoHtmlDto: ElementoHtmlDto,
-  ) {
-    try {
-      const elementoHtml = await this.elementoHtmlService.put(
-        id,
-        elementoHtmlDto,
-      );
-      res.status(HttpStatus.OK).json({
-        Success: true,
-        Status: HttpStatus.OK,
-        Message: 'Update successful',
-        Data: elementoHtml,
-      });
-    } catch (error) {
-      res.status(HttpStatus.BAD_REQUEST).json({
-        Success: false,
-        Status: HttpStatus.BAD_REQUEST,
-        Message:
-          'Error service Put: The request contains an incorrect data type or an invalid parameter',
-        Data: error.message,
-      });
-    }
-  }
-
-  @Delete('/:id')
-  async delete(@Res() res, @Param('id') id: string) {
-    try {
-      await this.elementoHtmlService.delete(id);
-      res.status(HttpStatus.OK).json({
-        Success: true,
-        Status: HttpStatus.OK,
-        Message: 'Delete successful',
-        Data: {
-          _id: id,
-        },
-      });
-    } catch (error) {
-      res.status(HttpStatus.NOT_FOUND).json({
-        Success: false,
-        Status: HttpStatus.NOT_FOUND,
-        Message: 'Error service Delete: Request contains incorrect parameter',
-        Data: error.message,
-      });
-    }
-  }
-}
